--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,62 @@
+anaconda==0.0.1.1
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.6
+colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
+EasyProcess==1.1
+entrypoint2==1.1
+Flask==2.3.2
+fonttools==4.40.0
 greenlet==3.0.1
-numpy==1.26.1
-pandas==2.1.2
+h11==0.14.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+keyboard==0.13.5
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+MouseInfo==0.1.3
+mss==9.0.1
+numpy==1.24.3
+outcome==1.3.0.post0
+packaging==23.1
+pandas==2.1.1
+Pillow==9.5.0
+plotly==5.15.0
+PyAutoGUI==0.9.54
+pycparser==2.21
+pygame==2.4.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+PySocks==1.7.1
 python-dateutil==2.8.2
+pytweening==1.0.7
 pytz==2023.3.post1
+requests==2.31.0
+schedule==1.2.1
+selenium==4.15.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
+tenacity==8.2.2
+trio==0.23.1
+trio-websocket==0.11.1
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.7
+Werkzeug==2.3.6
+wsproto==1.2.0
