--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.6
 colorama==0.4.6
 contourpy==1.1.0
 cycler==0.11.0
+docopt==0.6.2
 EasyProcess==1.1
 entrypoint2==1.1
 Flask==2.3.2
@@ -29,6 +30,7 @@ outcome==1.3.0.post0
 packaging==23.1
 pandas==2.1.1
 Pillow==9.5.0
+pipreqs==0.4.13
 plotly==5.15.0
 PyAutoGUI==0.9.54
 pycparser==2.21
@@ -44,6 +46,7 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 pytweening==1.0.7
 pytz==2023.3.post1
+reqs==0.0.2
 requests==2.31.0
 schedule==1.2.1
 selenium==4.15.2
@@ -60,3 +63,4 @@ tzdata==2023.3
 urllib3==2.0.7
 Werkzeug==2.3.6
 wsproto==1.2.0
+yarg==0.1.9
