--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ click==8.1.6
 colorama==0.4.6
 contourpy==1.1.0
 cycler==0.11.0
+distlib==0.3.8
 docopt==0.6.2
 EasyProcess==1.1
 entrypoint2==1.1
+filelock==3.13.1
 Flask==2.3.2
 fonttools==4.40.0
 greenlet==3.0.1
@@ -31,6 +33,7 @@ packaging==23.1
 pandas==2.1.1
 Pillow==9.5.0
 pipreqs==0.4.13
+platformdirs==4.1.0
 plotly==5.15.0
 PyAutoGUI==0.9.54
 pycparser==2.21
@@ -61,6 +64,7 @@ trio-websocket==0.11.1
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
+virtualenv==20.25.0
 Werkzeug==2.3.6
 wsproto==1.2.0
 yarg==0.1.9
